fix vertical overflow in shell

--- a/app/frontend/styles/Home.module.css
+++ b/app/frontend/styles/Home.module.css
@@ -172,7 +172,7 @@
   justify-content: start;
   flex-wrap:nowrap;
 
-  max-height: 90vh;
+  max-height: 95vh;
   width: 100vw;
 
 
@@ -182,8 +182,8 @@
 
 .lowerPanel {
   position: absolute;
-  top: 90vh;
-  height: 10vh;
+  top: 95vh;
+  height: 5vh;
   width: 100vw;
   background-color: #1e1e1e;
   display: flex;
@@ -285,7 +285,7 @@
   overflow-wrap: break-word;
   padding-right: 5px;
   padding-left: 5px;
-  height: 90vh;
+  height: 95vh;
   width: 100%;
   background-color: #1e1e1e;
   color: white;
